--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
     "mongodb": "^4.8.1",
     "next": "latest",
     "react": "^18.2.0",
@@ -14,6 +16,7 @@
   "devDependencies": {
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
+    "cypress": "^11.2.0",
     "typescript": "4.6.3"
   }
 }
