--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
     "mongodb": "^4.8.1",
+    "mongoose": "^6.8.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,6 @@
     "@types/react": "16.9.17",
     "@types/styled-components": "^5.1.26",
     "cypress": "^11.2.0",
-    "typescript": "4.6.3"
+    "typescript": "^4.6.3"
   }
 }
