--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "mongodb": "^4.8.1",
@@ -13,7 +15,8 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
