--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "bootstrap": "^5.2.3",
+    "@next/font": "^13.1.1",
     "formik": "^2.2.9",
     "mongodb": "^4.8.1",
     "mongoose": "^6.8.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6",
-    "tailwindcss": "^3.2.4"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
